# dbreg

./: README.md  config.ini
my_extension/: Cargo.toml
my_extension/src/: lib.rs
pg_extension/: Cargo.toml  README.md  pg_extension.control
pg_extension/sql/: pg_extension--0.0.1.sql
pg_extension/src/: lib.rs
pg_extension/src/bindings/: mod.rs  register.rs  train.rs  trainer.rs
pg_extension/template/: Cargo.pg13.toml  Cargo.pg14.toml
resources/dataset/frappe/: test.csv  test.libsvm  train.csv  train.libsvm  valid.csv  valid.libsvm
resources/scripts/database/: csv2libsvm.py  load_libsvm_dataset_to_db.sh
src/: main.py  pg_interface.py
src/base/singa-engine/: api.py
src/base/singa-engine/config/: __init__.py  dataset_config.py  model_config.py  optimizer_config.py  reg_config.py  train_config.py
src/base/singa-engine/model/: __init__.py  cnn.py  mlp.py  reg_loss.py
src/base/singa-engine/reg/: __init__.py  reg_loss.py
src/common/: __init__.py  catcher.py  logger.py
src/datacache/: data_cache.py
src/dataset/: libsvm_dataloader.py  libsvm_dataset.py  mlpmodel.py  stream_dataloader.py
src/engine/: api.py  trainer.py  webapi.py
src/engine/config/: __init__.py  dataset_config.py  reg_config.py
src/engine/data/: __init__.py  loader.py  mlpmodel.py  mnist.py  stream_dataloader.py
src/engine/model/: __init__.py  mlp.py  moder.py
src/engine/optimizer/: opter.py
src/utils/: plt.py
src/web/: hello.py  train_app.py
src/web-service/: hello.py
