[package]
name = "pg_extension"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14", "python"]
python = ["pyo3"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
pgrx = "=0.12.9"
pgrx-pg-sys = "=0.12.9"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
pyo3 = { version = "0.23.4", features = ["auto-initialize"], optional = true }
once_cell = "1.20.3"
log = "0.4.25"
serde = "1.0.217"
serde_derive = "1.0.217"
shared_memory = "0.12.4"


[dev-dependencies]
pgrx-tests = "=0.12.9"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
